--- a/jogo-da-forca/src/App.css
+++ b/jogo-da-forca/src/App.css
@@ -53,6 +53,9 @@ body {
   text-transform: uppercase;
   line-height: 3.5rem;
   user-select: none;
+  color: #333;
+  opacity: 1;
+  visibility: visible;
 }
 
 .status {
@@ -124,6 +127,9 @@ footer {
     width: 2.2rem;
     height: 2.8rem;
     line-height: 2.8rem;
+    color: #333;
+    opacity: 1;
+    visibility: visible;
   }
 
   .hangman-figure {
