--- a/jogo-da-forca/src/App.css
+++ b/jogo-da-forca/src/App.css
@@ -32,7 +32,7 @@ body {
 .score {
   font-size: 1.2rem;
   font-weight: bold;
-  color: #f0f0f0; /* Ou use #ffffff para branco puro */
+  color: #6a0dad;
   margin-bottom: 1rem;
 }
 
