--- a/jogo-da-forca/src/App.css
+++ b/jogo-da-forca/src/App.css
@@ -81,7 +81,7 @@ body {
 
 button {
   margin-top: 1rem;
-  background-color: #e0d4ff;
+  background-color: #fff;
   color: #4a148c;
   border: none;
   padding: 10px 16px;
