--- a/jogo-da-forca/src/index.css
+++ b/jogo-da-forca/src/index.css
@@ -42,7 +42,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #b0b0b0;
   cursor: pointer;
   transition: border-color 0.25s;
 }
