--- a/jogo-da-forca/src/index.css
+++ b/jogo-da-forca/src/index.css
@@ -42,15 +42,23 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #b0b0b0;
+  background-color: #444444;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #f9f9f9;
   }
   a:hover {
     color: #747bff;
